一般ユーザー用アカウント復活APIを作成、リファクタリング
