# swagger/openapi.json
@@ -162,6 +162,41 @@
         }
       }
     },
+    "/restore": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "メールアドレスとパスワードをもとに、指定したユーザーを復活させる。",
+        "requestBody": {
+          "content": {
+            "application/json:": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "example": "test@example.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "password"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "no content"
+          },
+          "419": {
+            "description": "CORS not allowed"
+          }
+        }
+      }
+    },
     "/login": {
       "post": {
         "tags": [
